# atc

./: .gitignore  LICENSE  README.md  install.sh  package-lock.json  pyproject.toml  uninstall.sh  update.sh
atc/: __main__.py  argparse_utils.py  atcoder.py  cli.py  commands.py  config.py  console.py  contest.py  doctor.py  manual.py  metadata.py  models.py  paths.py  problems.py  refresh.py  runner.py  samples.py  stress.py  template_commands.py  templates.py  visual.py  watch.py  watch_render.py
atc/commands/: config.py  manual.py  parsing.py  registry.py  run.py  template_commands.py  usage_error.py
atc/core/: atcoder.py  config.py  contest.py  doctor.py  manual.py  metadata.py  paths.py  problems.py  refresh.py  runner.py  samples.py  stress.py  templates.py  watch.py
atc/templates/: manifest.json  template.cpp  template.py
atc/ui/: console.py  watch_view.py
docs/: AI_CONTEXT.md  ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md  INSTALL.md  TROUBLESHOOTING.md  USAGE.md
tests/: test_atcoder_tasks.py  test_cli_flow.py  test_commands.py  test_config.py  test_contest_paths.py  test_doctor.py  test_manual.py  test_metadata.py  test_problems.py  test_refresh.py  test_runner.py  test_samples.py  test_stress.py  test_template_commands.py  test_templates.py  test_visual.py  test_visual_assets.py  test_watch.py
tools/: README.md  visualizer.html
vscode-extension/: .vscodeignore  README.md  package.json
vscode-extension/scripts/: sync-python-cli.js
vscode-extension/src/: extension.js
vscode/atc-helper/: .vscodeignore  README.md  package-lock.json  package.json
(+11 files in other folders)
