[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "atc"
version = "0.1.0"
description = "AtCoder helper CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "online-judge-tools",
  "tomli; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
atc = "atc.cli:main"

[tool.setuptools.packages.find]
include = ["atc*"]

[tool.setuptools.package-data]
atc = [
  "templates/template.py",
  "templates/template.cpp",
  "templates/manifest.json",
  "templates/python/*.py",
  "templates/cpp/*.cpp",
  "templates/stress/*.py",
  "assets/visualizer.html"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
