[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "atc"
version = "0.1.0"
description = "AtCoder helper CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "online-judge-tools",
  "rich",
  "tomli; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
atc = "atc.cli:main"

[tool.setuptools.packages.find]
include = ["atc*"]

[tool.setuptools.package-data]
atc = [
  "resources/templates/template.py",
  "resources/templates/template.cpp",
  "resources/templates/manifest.json",
  "resources/templates/python/*.py",
  "resources/templates/cpp/*.cpp",
  "resources/templates/stress/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
